--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+* [L#1317710] Support TLS versions 1.1, 1.2, and newer
+
 -- 2.11.2 2014-04-14 --
 * [L#1206293] Fix crashes after calling +reload
 * [L#1206293] Fix commands that output entity info
