--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+-- 2.12.0 2015-04-06 --
+* [L#907372] Fix wrong log file placement
 * [L#1440795] Show hub address in the user registration confirmation message (if available) (emtee)
 * Apply hub address format for pingers changes mandated by ADC-EXT 1.0.9. (emtee)
 * Improve UTF-8 RFC-3629 compliance (cologic) 
